# tactile-mnist

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
doc/: Starstruck.md  TactileClassificationEnv.md  TactileMNIST.md  TactileMNISTVolume.md  TactilePerceptionConfig.md  TactilePerceptionEnv.md  TactileRegressionEnvs.md  Toolbox.md  datasets.md
docs/: Starstruck.md  TactileMNIST.md  TactilePerceptionEnv.md  TactileRegressionEnv.md  Toolbox.md  datasets.md  index.html  style.css
example/: tactile_mnist_env.py  tactile_mnist_env_example.py  tactile_mnist_env_example_vec.py  tactile_mnist_env_vec.py  tactile_mnist_round_iterator_example.py  touch_dataset_round_iterator.py  touch_dataset_round_iterator_example.py  view_mesh_dataset.py  view_objaverse_xl_mesh_dataset.py  view_touch_dataset.py
tactile_mnist/: __init__.py  constants.py  data_loader.py  dataset.py  fast_tar_file_reader.py  huggingface_dataset.py  iterable_types.py  mesh_dataset.py  objaverse_xl_dataset.py  peekable_queue.py  registration.py  resource.py  simple_mesh_dataset.py  storage_utils.py  tactile_classification_env.py  tactile_classification_renderer.py  tactile_classification_vector_env.py  tactile_perception_renderer.py  tactile_perception_vector_env.py  tactile_pose_estimation_env.py  tactile_volume_estimation_env.py  touch_data.py  util.py
tactile_mnist/tactile_renderer/: cycle_gan_renderer_torch.py  depth_renderer_jax.py  depth_renderer_numpy.py  depth_renderer_torch.py  factory.py  tactile_renderer.py  tactile_renderer_jax.py  taxim_renderer_jax.py  (+2 more)
tools/: create_gifs.bash
